--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
 
     <link rel="stylesheet" href="style.css">
+	
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-f3cf8b28-a443-428d-b5ce-891f0bc1b54f"></div>
 
 </head>
 
