--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent fixed-top">
         <div class="container">
-            <img class="navbar-brand" src="Images/spa da lu transp fondo.png">
+           <a href="index.html"><img class="navbar-brand" src="Images/spa da lu transp fondo.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
