--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
 
     <!---navbar----->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent fixed-top">
+     <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-dark fixed-top">
         <div class="container">
             <a href="index.html"><img class="navbar-brand" src="Images/spa da lu transp fondo.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
