--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
       </nav>
 
 
-
+ <section id="SERVICES">
 
       <h1 class="h1_services">Our Services</h1>
 
@@ -108,7 +108,7 @@
   
   
 
-
+	    </section>
 
 
 
