--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,15 @@
 
     <!---navbar----->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-dark fixed-top">
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-faded navbar-toggleable-md bg-dark bg-dark fixed-top">
+   
         <div class="container">
-           <a href="index.html"><img class="navbar-brand" src="Images/spa da lu transp fondo.png"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+            <a href="index.html"><img class="navbar-brand" src="Images/spa da lu transp fondo.png"></a>
+         
+            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="my-1 mx-2 close">X</span>
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
