--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
    
         <div class="container">
 
-            <a href="index.html"><img class="navbar-brand" src="Images/spa da lu transp fondo.png"></a>
+            <a href="index.html"><img class="nav-brand2" src="Images/spa da lu transp fondo.png"></a>
          
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="my-1 mx-2 close">X</span>
